--- a/slides.html.ejs
+++ b/slides.html.ejs
@@ -67,7 +67,7 @@
     }
 
     img {
-      max-height: 65vh;
+      max-height: 60vh;
       margin: -10px 0;
     }
 
@@ -141,7 +141,7 @@
     <%- body %>
   </div>
   <div class='Overlay'>
-    <a href='https://twitter.com/MattMcKegg'>@MattMcKegg</a> | <strong>github.com/mmckegg</strong>
+    <strong>github.com/mmckegg</strong> | <a href='https://twitter.com/MattMcKegg'>@MattMcKegg</a> <br/> soundcloud.com/destroy-with-science
   </div>
   <script>
     var viewer = document.querySelector('.Viewer')
